--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,11 @@
+
+[build]
+  command = "npm run build"
+  publish = "build"
+
+[build.environment]
+  NODE_VERSION = "18.16.0"  # Replace with your actual Node version if different
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
